# FuncQBank

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  db.py  main.py  models.py  render.py  security.py  templating.py
app/routers/: admin.py  auth_routes.py  exam.py  practice.py
app/static/: app.css  app.js
app/templates/: _beian.html  _practice_body.html  base.html  error.html  exam_home.html  exam_report.html  exam_take.html  home.html  login.html  practice.html  register.html  search.html
app/templates/admin/: edit.html  list.html  users.html
data/extracted/第三章_线性算子/3.1_线性算子/: image1.json  image2.json  image3.json  image4.json  image5.json  image6.json  image7.json  image8.json
data/extracted/第三章_线性算子/3.2_有界线性算子/: image10.json  image11.json  image12.json  image13.json  image14.json  image15.json  image16.json  image17.json  image18.json  image19.json  image20.json  image21.json  image22.json  image23.json  image24.json  image25.json  image26.json  image27.json  image28.json  image29.json  image9.json
data/extracted/第三章_线性算子/3.3_基本定理及应用/: image30.json  image31.json  image32.json  image33.json  image34.json  image35.json  image36.json  image37.json  image38.json  image39.json  image40.json  image41.json  image42.json  image43.json  image44.json  image45.json  image46.json  image47.json  image48.json  image49.json  image50.json  image51.json  (+17 more)
scripts/: create_admin.py  export.py  extract.py  generate_explanations.py  import_explanations.py  seed.py
(+146 files in other folders)
