[project]
name = "funcqbank"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.137.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]
